infra/overlays/dev/redis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-ingress
  namespace: redis
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${REDIS_HOST}
    secretName: redis-commander-tls
  rules:
  - host: ${REDIS_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander-service
            port:
              number: 8081
